# il2cpp-dumper-rs

./: .gitignore  Cargo.toml  README.md  config.json  il2cpp.h  stringliteral.json
src/: config.rs  error.rs  lib.rs  main.rs
src/disassembler/: arm.rs  mod.rs  x86.rs
src/executor/: custom_attribute_reader.rs  il2cpp_executor.rs  mod.rs
src/formats/: elf.rs  macho.rs  mod.rs  nso.rs  pe.rs  wasm.rs
src/il2cpp/: base.rs  enums.rs  metadata.rs  mod.rs  structures.rs
src/io/: binary_stream.rs  mod.rs  version_aware.rs
src/output/: cpp_type_dependency_graph.rs  decompiler.rs  dummy_assembly_generator.rs  generics.rs  mod.rs  script_json.rs  struct_generator.rs
src/search/: mod.rs  section_helper.rs
src/utils/: mod.rs  pattern_search.rs  string_utils.rs
