[package]
name = "il2cpp_dumper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "il2cpp_dumper"
path = "src/main.rs"

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"] }
dotnetdll = "0.1.2"
lz4_flex = "0.11"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"] 
opt-level = 3
codegen-units = 1
strip = true
debug = false
overflow-checks = false
